feat: adiciona script para popup personalizado para erro e sucesso

--- a/frontend/cadastro.html
+++ b/frontend/cadastro.html
@@ -4,13 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Cadastrar-se</title>
+    <link rel="stylesheet" href="css/cadastro.css">
 </head>
+
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 <body>
     <div class="container">
-        <form class="login-box">
+        <form class="cadastro-box" id="form-cadastro">
             <h2>Cadastro</h2>
 
             <div class="input-group">
@@ -42,7 +44,7 @@
         </form>
     </div>
 
-    <script src="./javascript/index.js"></script>
+    <script src="./javascript/cadastro.js"></script>
 </body>
 
 </html>
