feat: adiciona script para popup personalizado para erro e sucesso

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/login.css">
 </head>
+
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 <body>
     <div class="container">
-        <form class="login-box">
+        <form class="login-box" id="form-login">
             <h2>Login</h2>
 
             <div class="input-group">
@@ -34,7 +36,7 @@
         </form>
     </div>
 
-    <script src="./javascript/index.js"></script>
+    <script src="./javascript/login.js"></script>
 </body>
 
 </html>
